--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["day01/rs", "day02/rs", "day03/rs"]
+members = ["day01/rs", "day02/rs", "day03/rs", "day04/rs"]
